--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "decimal.js": "^10.6.0",
+    "nestjs-pino": "^4.5.0",
+    "pino-http": "^11.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
